# rna-seq-mini

./: CONTRIBUTING.md  DESCRIPTION  Dockerfile  Dockerfile 2  Makefile  README.md  _targets.R  advanced.md  ai_insights.py  app.R  cloud_autoscaler.py  collaboration_manager.py  collaborative_server.py  configuration.md  cost_monitor.py  demo_optimization_report.json  dynamic_resources.py  error_handler.py  gene_network_analyzer.py  notification_manager.py  parallel_pipeline.R  params.yaml  params_singlecell_example.yaml  pathway_impact_analyzer.py  performance_demo.R  performance_tools.R  pyproject.toml  quickstart.md  requirements-ml.txt  requirements-singlecell.txt  requirements-web.txt  resource_estimator.py  run_pipeline.R  setup_wizard.py  singlecell.yml  singlecell_clustering.py  singlecell_qc.py  snakemake_error_wrapper.py  troubleshooter.py  troubleshooting.md  (+2 more)
api/: __init__.py  celery_app.py  client.py  db.py  plugins.py  server.py  tasks.py  webhooks.py
config/: logging.yaml  params.yaml  params_singlecell_example.yaml  schema.json
containers/: Dockerfile  entrypoint.sh  environment.lock.yml  environment.yml  rnaseq-analysis.lock.yml  rnaseq-core.lock.yml
deployments/: docker-compose.yml
docs/: advanced.md  configuration.md  quickstart.md  troubleshooting.md  workflow.md
envs/: base.yml  qc.yml  rnaseq-analysis.yml  rnaseq-core.yml  salmon.yml
onboarding/: README.md
performance/: benchmarking_system.R  performance_reports.R
pipeline-core/: Makefile  Makefile 2
rnaseq-mini/: AGENTS.md  LICENSE  Makefile  pyproject.toml
rnaseq-mini/config/: contrasts.tsv  params.yaml
rnaseq-mini/config/profiles/: local.smk.yaml  slurm.nf.config
rnaseq-mini/containers/: Dockerfile
rnaseq-mini/envs/: base.yml  r.yml
rnaseq-mini/pipeline/nextflow/: main.nf
rnaseq-mini/pipeline/snakemake/: Snakefile
rnaseq-mini/pipeline/snakemake/rules/: salmon.smk
rnaseq-mini/pipeline/snakemake/utils/: functions.py
rnaseq-mini/report/: rnaseq_report.Rmd
rnaseq-mini/scripts/: fgsea_pathways.R
scripts/: ai_insights.py  auto_config 2.py  cache_manager 2.py  cache_manager.py  cloud_autoscaler.py  collaborative_server.py  compute_hashes 2.sh  compute_hashes.sh  cost_monitor.py  demo_optimization 2.py  deploy_aws.py  download_references.py  download_references.sh  dynamic_resources.py  error_handler.py  estimate_resources.py  gene_network_analyzer.py  jupyter_integration.py  monitor_progress.py  notification_manager.py  parameter_optimizer.py  pathway_impact_analyzer.py  predictive_modeling.py  quality_assessor.py  render_report 2.R  resource_estimator.py  result_explanation.py  run_fgsea.R  run_scanpy_analysis.py  run_stage.py  setup_wizard.py  (+10 more)
(+110 files in other folders)
