[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rnaseq-mini"
version = "1.0.0"
description = "Compact, production-grade RNA-seq pipeline with Snakemake & Nextflow"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RNA-seq Mini Pipeline Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: R",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rnaseq_mini"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S603", "S607"]  # subprocess calls are expected in bioinformatics

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "scripts",
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
